--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple PWA audio listener",
   "main": "index.js",
   "scripts": {
+    "lh": "lighthousebot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/fabriciofmsilva/audio/issues"
   },
-  "homepage": "https://github.com/fabriciofmsilva/audio#readme"
+  "homepage": "https://github.com/fabriciofmsilva/audio#readme",
+  "devDependencies": {
+    "lighthousebot": "git+https://github.com/GoogleChromeLabs/lighthousebot.git"
+  }
 }
